docs: add open-api documentation